[gd_scene load_steps=6 format=2]

[ext_resource path="res://16xSquare.png" type="Texture" id=1]
[ext_resource path="res://GameTypes/Platformer/PlaformerCharacter.gd" type="Script" id=2]
[ext_resource path="res://Resources/platformer_data.tres" type="Resource" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="PlaformerCharacter" type="KinematicBody2D"]
script = ExtResource( 2 )
platformer_data = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0, 0.92549, 0.188235, 1 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DownCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 10 )

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="JumpBufferTimer" type="Timer" parent="."]
